<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/challenge"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/challenge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:lines="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_day"
        tools:text="Title of Advent of Code Challenge" />

    <TextView
        android:id="@+id/txt_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/challenge_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Day 1" />

    <ImageView
        android:id="@+id/img_star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/empty_first_star"
        app:layout_constraintEnd_toStartOf="@+id/img_star_2"
        app:layout_constraintTop_toTopOf="@+id/img_star_2"
        app:srcCompat="@drawable/ic_star_black_24dp" />

    <ImageView
        android:id="@+id/img_star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/empty_second_star"
        app:layout_constraintBottom_toBottomOf="@+id/txt_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_day"
        app:srcCompat="@drawable/ic_star_black_24dp" />

    <ImageView
        android:id="@+id/imgLink"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/link_to_advent_of_code_page_on_this_challenge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_title"
        app:srcCompat="@drawable/ic_link_black_48dp" />

    <ImageView
        android:id="@+id/imgPuzzleInput"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/puzzle_input"
        app:layout_constraintStart_toEndOf="@+id/imgLink"
        app:layout_constraintTop_toTopOf="@+id/imgLink"
        app:srcCompat="@drawable/ic_puzzle_input_48dp" />

    <ImageView
        android:id="@+id/imgShareChallenge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/puzzle_input"
        app:layout_constraintStart_toEndOf="@+id/imgPuzzleInput"
        app:layout_constraintTop_toTopOf="@+id/imgPuzzleInput"
        app:srcCompat="@drawable/ic_share_black_48dp" />

    <TextView
        android:id="@+id/txtInputWebView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ADABAB"
        android:fontFamily="monospace"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLink"
        tools:text="#....\n#...#\n##.##\n....#\n#.##."
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtFirstAnswerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_puzzle_answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputWebView" />

    <TextView
        android:id="@+id/txtSecondAnswerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/second_puzzle_answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstAnswerLabel" />

    <TextView
        android:id="@+id/txtFirstAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#4CAF50"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtFirstAnswerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtFirstAnswerLabel"
        app:layout_constraintTop_toTopOf="@+id/txtFirstAnswerLabel"
        tools:text="12345" />

    <TextView
        android:id="@+id/txtSecondAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#4CAF50"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSecondAnswerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSecondAnswerLabel"
        app:layout_constraintTop_toTopOf="@+id/txtSecondAnswerLabel"
        tools:text="6789" />


</androidx.constraintlayout.widget.ConstraintLayout>

